# chi-cli

./: .ghci  .gitmodules  README.md  chi-hspec.cabal  chi.cabal  ci.cabal  package-name.cabal
src/: Chi.hs  Ci.hs  Cli.hs  CommandLineOption.hs  Git.hs  Main.hs  ModuleName.hs  Option.hs  Types.hs
test/: ChiSpec.hs  CiSpec.hs  ModuleNameSpec.hs  SpecHelper.hs
